--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ aiohttp==3.6.2
 async-timeout==3.0.1
 asyncio==3.4.3
 networkx==2.4
-pandas==1.0.5
+pandas==1.2.4
+pytest==6.2.3
 spotipy==2.13.0
 urllib3==1.25.9
